Update ODS file in wcagemtool
Update global report section 3


Former-commit-id: a15e6deb6de0bbe583811766982958bb75609eb3

--- a/wcagem-tool/wcag-em-report-tool/Dockerfile
+++ b/wcagem-tool/wcag-em-report-tool/Dockerfile
@@ -18,11 +18,11 @@ RUN gem install compass --no-ri --no-rdoc
 RUN echo @edge http://nl.alpinelinux.org/alpine/v3.10/community >> /etc/apk/repositories \
     && echo @edge http://nl.alpinelinux.org/alpine/v3.10/main >> /etc/apk/repositories \
     && apk add --no-cache \
-    chromium@edge \
-    harfbuzz@edge \
-    nss@edge \
-    freetype@edge \
-    ttf-freefont@edge \
+    # chromium@edge \
+    # harfbuzz@edge \
+    # nss@edge \
+    # freetype@edge \
+    # ttf-freefont@edge \
     && rm -rf /var/cache/* \
     && mkdir /var/cache/apk
 
