--- a/motor-js/renderer/Dockerfile
+++ b/motor-js/renderer/Dockerfile
@@ -1,17 +1,11 @@
-FROM artefactos-ic.scae.redsara.es:6000/alpine:3.10
+FROM alpine:3.12
 
 #Instalar Node
-RUN apk add --no-cache nodejs-current nodejs-npm
-  
-#Instalar Chromium  
-# RUN apk add --no-cache \
-#     udev \
-#     ttf-freefont \
-#     chromium
+RUN apk add --no-cache nodejs-current nodejs-npm tini
 
 # Installs latest Chromium package.
-RUN echo @edge http://nl.alpinelinux.org/alpine/v3.10/community >> /etc/apk/repositories \
-    && echo @edge http://nl.alpinelinux.org/alpine/v3.10/main >> /etc/apk/repositories \
+RUN echo @edge http://nl.alpinelinux.org/alpine/v3.12/community >> /etc/apk/repositories \
+    && echo @edge http://nl.alpinelinux.org/alpine/v3.12/main >> /etc/apk/repositories \
     && apk add --no-cache \
     chromium@edge \
     harfbuzz@edge \
@@ -20,7 +14,6 @@ RUN echo @edge http://nl.alpinelinux.org/alpine/v3.10/community >> /etc/apk/repo
     ttf-freefont@edge \
     && rm -rf /var/cache/* \
     && mkdir /var/cache/apk
-
 
 #Copiamos el prerrender
 COPY prerender/ /opt/prerender/
@@ -34,3 +27,6 @@ RUN chmod -R 777 /opt/prerender/
 #Usuario node para ejecutar el renderer
 RUN addgroup -S node && adduser -S -G node node
 USER node
+
+# Set tini as entrypoint
+ENTRYPOINT ["/sbin/tini", "--"]
