--- a/motor-js/docker-compose.yml
+++ b/motor-js/docker-compose.yml
@@ -3,14 +3,16 @@ version: '2.2'
 services:
     renderer:
       privileged: true
-      image: artefactos-ic.scae.redsara.es:6000/oawjs_renderer
+      build: ./renderer
+      image: oawjs_renderer
       scale: 3
       cpus: 2
       restart: always
       command: node /opt/prerender/server.js
       
     proxy:
-      image: artefactos-ic.scae.redsara.es:6000/oawjs_proxy
+      build: ./proxy      
+      image: oawjs_proxy
       command: node /opt/proxy/index.js
       restart: always
       ports:
@@ -18,7 +20,7 @@ services:
       container_name: oaw_proxy   
 
     nginx:
-      image: artefactos-ic.scae.redsara.es:6000/nginx:1.17.9-alpine      
+      image: nginx:1.17.9-alpine      
       volumes:
         - ./nginx/reverse.conf:/etc/nginx/conf.d/default.conf
         - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt
@@ -27,4 +29,4 @@ services:
         - renderer
       restart: always
       shm_size: '1gb'
-      container_name: oaw_nginx
+      container_name: oaw_nginx 
