--- a/motor-js/renderer/Dockerfile
+++ b/motor-js/renderer/Dockerfile
@@ -1,13 +1,7 @@
 FROM alpine:3.12
 
 #Instalar Node
-RUN apk add --no-cache nodejs-current nodejs-npm
-  
-#Instalar Chromium  
-# RUN apk add --no-cache \
-#     udev \
-#     ttf-freefont \
-#     chromium
+RUN apk add --no-cache nodejs-current nodejs-npm tini
 
 # Installs latest Chromium package.
 RUN echo @edge http://nl.alpinelinux.org/alpine/v3.12/community >> /etc/apk/repositories \
@@ -21,7 +15,6 @@ RUN echo @edge http://nl.alpinelinux.org/alpine/v3.12/community >> /etc/apk/repo
     && rm -rf /var/cache/* \
     && mkdir /var/cache/apk
 
-
 #Copiamos el prerrender
 COPY prerender/ /opt/prerender/
 
@@ -34,3 +27,6 @@ RUN chmod -R 777 /opt/prerender/
 #Usuario node para ejecutar el renderer
 RUN addgroup -S node && adduser -S -G node node
 USER node
+
+# Set tini as entrypoint
+ENTRYPOINT ["/sbin/tini", "--"]
