--- a/wcagemtool/nginx_conf.conf
+++ b/wcagemtool/nginx_conf.conf
@@ -9,6 +9,8 @@ server {
 		proxy_set_header Host $host;
 		proxy_pass_request_headers on;	
 		proxy_pass	http://node:9000;
+		proxy_read_timeout 600000s;
+    	proxy_connect_timeout 600000s;
     }
 	
 	location /ods {
@@ -16,6 +18,8 @@ server {
 		proxy_set_header Host $host;
 		proxy_pass_request_headers on;	
     	proxy_pass	http://node:9001/ods;
+		proxy_read_timeout 600000s;
+    	proxy_connect_timeout 600000s;
 	} 
 }
 
