WCAGEMTOOL: Fix styles

--- a/wcagemtool/docker-compose.yml
+++ b/wcagemtool/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     container_name: wcag_em_tool_node
 
   nginx:
-    image: artefactos-ic.scae.redsara.es:6000/nginx:1.13.8-alpine      
+    image: nginx:1.13.8-alpine      
     ports:
       - "9000:80"
     volumes:
