--- a/wcagemtool/Dockerfile
+++ b/wcagemtool/Dockerfile
@@ -1,4 +1,5 @@
-FROM artefactos-ic.scae.redsara.es:6000/alpine:3.10
+FROM alpine:3.10
+#FROM artefactos-ic.scae.redsara.es:6000/alpine:3.10
 
 # Install base packages
 RUN apk update 
@@ -17,6 +18,11 @@ RUN gem install compass --no-ri --no-rdoc
 RUN echo @edge http://nl.alpinelinux.org/alpine/v3.10/community >> /etc/apk/repositories \
     && echo @edge http://nl.alpinelinux.org/alpine/v3.10/main >> /etc/apk/repositories \
     && apk add --no-cache \
+    # chromium@edge \
+    # harfbuzz@edge \
+    # nss@edge \
+    # freetype@edge \
+    # ttf-freefont@edge \
     && rm -rf /var/cache/* \
     && mkdir /var/cache/apk
 
@@ -30,3 +36,6 @@ RUN npm install -g forever
 RUN npm install
 RUN bower install --allow-root
 
+#Usuario node para ejecutar el renderer
+# RUN addgroup -S node && adduser -S -G node node
+# USER node
