OAW: XLSX Export
WCAG: Fix ODS/XLSX issues, UX improvments

Former-commit-id: d59aac7d59a10f5904047c0a3f1bcd7d0fd6bc17

--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -96,6 +96,7 @@ export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templat
 
 
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
