--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -91,11 +91,11 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.17</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.lowagie</groupId> -->
-<!-- 			<artifactId>itext</artifactId> -->
-<!-- 			<version>2.1.4</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.lowagie</groupId> -->
+		<!-- <artifactId>itext</artifactId> -->
+		<!-- <version>2.1.4</version> -->
+		<!-- </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
 		<dependency>
@@ -269,6 +269,16 @@
 			<version>2.8.11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 
 	</dependencies>
 
