--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -89,6 +89,7 @@ export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/
 export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
 
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
