Add more info into the xlsm inside the zip file. At last the macros work in the new file! Hurrah!
Former-commit-id: 2a08fd1675f5f091e336cba69a674fe8bb11aeb9

--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -88,6 +88,8 @@ export.open.office.template.une.2012b.CCAA = ${deploy.path}/WEB-INF/templatesODT
 export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
 
+export.open.office.template.empty.XLSM.template = ${deploy.path}/WEB-INF/templatesXLSM/annex_empty_template.xlsm
+
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
 
 export.open.office = ${files.path}/exports/openOffice/
