--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -85,7 +85,6 @@ export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/
 export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
 export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
 
-
 export.open.office.template.une.2012b.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
@@ -94,6 +93,7 @@ export.open.office.template.common = ${deploy.path}/WEB-INF/templatesODT/Plantil
 export.open.office.template.common.category = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Segmento.odt
 export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Complejidad.odt
 
+export.open.office.template.empty.XLSM.template = ${deploy.path}/WEB-INF/templatesXLSM/annex_empty_template.xlsm
 
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
 
