--- a/portal/src/test/resources/crawler.properties
+++ b/portal/src/test/resources/crawler.properties
@@ -69,6 +69,8 @@ export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/
 export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_embed.odt
 export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
 export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
+export.open.office.template.empty.XLSM.template = ${deploy.path}/WEB-INF/templatesXLSM/annex_empty_template.xlsme el p
+
 
 export.open.office = ${files.path}/exports/openOffice/
 
