Accesibility Cartdige report fixes
Former-commit-id: abe984b6a1d8134397a682a7ee16c2ae69ab651f

--- a/portal/profiles/desarrollo/check.patterns.properties
+++ b/portal/profiles/desarrollo/check.patterns.properties
@@ -96,6 +96,7 @@ check.490.regex.pattern.date.r.3    = (revisada|revisi\u00F3n|review).*(enero|fe
 check.490.regex.pattern.date.r.4    = (revisada|revisi\u00F3n|review).*(enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre|January|February|March|April|May|June|July|August|September|October|November|December)\\s+((0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,)?\\s*(19|20)(\\d{2})\\D*
 check.490.regex.pattern.date.r.5    = (revisada|revisi\u00F3n|review).*(Gener|Febrer|Mar\u00E7|Abril|Maig|Juny|Juliol|Agost|Setembre|Octubre|Novembre|Desembre) +(0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,\\s*(19|20)(\\d{2})\\D*
 check.490.regex.pattern.date.r.6    = (revisada|revisi\u00F3n|review).*(Xaneiro|Febreiro|Marzo|Abril|Maio|Xu\u00F1o|Xullo|Agosto|Setembro|Outubro|Novembro|decembro)\\s+del?\\s+(19|20)(\\d{2})\\D
+check.491.regex.pattern             = \\bprocedimiento de aplicaci\u00F3n\\b|\\bprocediment d'aplicaci\u00F3\\b|\\baplikazioa\\b|\\bprocedemento de aplicaci\u00F3n\\b|\\benforcement procedure\\b|\\bproc\u00E9dure permettant d'assurer\\b\n|\\ble respect des dispositions\\b
 
 #Patrones de texto alternativo para niveles A, AA y AAA. Separados por , y con formato Java
 pattern.accesibility.alt.a   = \\blevel\\s+a\\b,\\bnivell?\\s+a\\b, \\bwcag\\s+a\\b,\\baccesibilidad\\s+a\\b, \\bprioridad\\s+1\\b,\\bconformi(dad|tat)\\s+a\\b,\\bA\\s+\\(?simple\\s+A\\)?\\b,\\ba\\s+maila\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b,\\bRD\\s+1112\\/2018\\b
