Fix global report literals
Former-commit-id: a39e37014d30d628fd42f9cee3761b3ef7460bc3

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -756,7 +756,7 @@ global.report.allocation.ambit.table.title          = Nivel de adecuaci\u00F3n e
 global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
 global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
 global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
-global.report.criteria.table.title                  = N\u00FAmero de portales por criterio: {0}
+global.report.criteria.table.title                  = N\u00FAmero de sitios web por criterio: {0}
 global.report.header.ambit                          = \u00C1mbito
 global.report.header.complexitivity                 = Complejidad
 global.report.header.num.sitios.web                 = N\u00FAmero de sitios web
