Updated forms to allow XML/excel import/export
Former-commit-id: d46465ee7e45d7a7d172dd0c8e6b2f95a82c1544

--- a/portal/profiles/docker/crawler.properties
+++ b/portal/profiles/docker/crawler.properties
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologías de la Comunicación, 
+# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologï¿½as de la Comunicaciï¿½n, 
 # This program is licensed and may be used, modified and redistributed under the terms
 # of the European Public License (EUPL), either version 1.2 or (at your option) any later 
 # version as soon as they are approved by the European Commission.
@@ -10,7 +10,7 @@
 # You should have received a copy of the EUPL1.2 license along with this program; if not, 
 # you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Modificaciones: MINHAFP (Ministerio de Hacienda y Función Pública) 
+# Modificaciones: MINHAFP (Ministerio de Hacienda y Funciï¿½n Pï¿½blica) 
 # Email: observ.accesibilidad@correo.gob.es
 #-------------------------------------------------------------------------------
 # Ra\u00EDz de la aplicaci\u00F3n
@@ -75,7 +75,7 @@ periodicidad.rastreo = 5
 periodicidad.max = 30
 numRastreos.max = 10
 
-xml.file.max.size = 500000
+xml.file.max.size = 1500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
 export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
