--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -753,6 +753,7 @@ gestion.terminos                            = Gesti\u00F3n de T\u00E9rminos
 
 global.report.allocation.ambit.primary.table.title  = Nivel de adecuaci\u00F3n estimado (% de sitios web) de los sitios web principales por \u00E1mbito adminsitrativo
 global.report.allocation.ambit.table.title          = Nivel de adecuaci\u00F3n estimado (% de sitios web) por \u00E1mbito adminsitrativo
+global.report.allocation.complexitivity.table.title = Nivel de adecuaci\u00F3n estimado (% de sitios web) por complejidad
 global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
 global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
 global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
