Annex XLSX file added with all charts.
Former-commit-id: 5cd30e1f56dd8cbc48ce0f971d2e99558d68d48c

--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -93,7 +93,7 @@ export.open.office.template.common = ${deploy.path}/WEB-INF/templatesODT/Plantil
 export.open.office.template.common.category = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Segmento.odt
 export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Complejidad.odt
 
-export.open.office.template.empty.XLSM.template = ${deploy.path}/WEB-INF/templatesXLSM/annex_empty_template.xlsm
+export.open.office.template.empty.XLSX.template = ${deploy.path}/WEB-INF/templatesXLSX/annex_empty_template.xlsx
 
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
 
