Add principal field to categoriea
Add not apply con compilance evolution graphics and table

Fix literals on export annexes on accesibility cartdidge


Former-commit-id: dfd7086be9478b97bbb698cb24a4a1f3d96fef64

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -3216,6 +3216,7 @@ resultados.anonimos.porc.pasa                                    = Porcentaje Pa
 resultados.anonimos.porc.portales                                = Porcentaje de Portales
 resultados.anonimos.porc.portales.a                              = A
 resultados.anonimos.porc.portales.aa                             = AA
+resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
 resultados.anonimos.porc.portales.parcial                        = No V\u00E1lido
