Fix accesibility cartidge aggregate report data
Select accesibility cartdige template


Former-commit-id: aba0660ea7ffed452c05f954e8b2a552ecbacd81

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3100,6 +3100,7 @@ report.config.plantillas.filter.title                = Plantillas a usar para ge
 report.config.tags.title                             = Etiquetas
 report.config.title                                  = Configurar informe agregado
 report.config.title.default                          = Informe de observatorio de accesibilidad web
+report.config.title.default.acc                      = INFORME AGREGADO DE LAS DECLARACIONES DE ACCESIBILIDAD
 report.config.title.label                            = T\u00EDtulo del documento generado
 report.config.title.title                            = T\u00EDtulo del informe
 report.evolution.allocation.graphic.title.fixed      = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
