Fix graphics in web page
Former-commit-id: 3827c6f2746d5d32fd1a41b450fe5dac786f7ac8

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3220,6 +3220,7 @@ resultados.anonimos.porc.pasa                                    = Porcentaje Pa
 resultados.anonimos.porc.portales                                = Porcentaje de Portales
 resultados.anonimos.porc.portales.a                              = Prioridad 1
 resultados.anonimos.porc.portales.aa                             = Prioridad 1 y 2
+resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lido
 resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
