--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2752,6 +2752,10 @@ observatory.status.summary.time.avg                                           = 
 observatory.status.summary.time.end                                           = Tiempo estimado fin
 observatory.status.summary.time.total                                         = Tiempo total
 observatory.status.title                                                      = Estado de la ejecuci\u00F3n
+observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
+observatory.stop.question                                                     = \u00BFEst\u00E1 seguro que desea parar la ejecuci\u00F3n del observatorio?
+observatory.stop.success.message                                              = Detenci\u00F3n de la ejecuci\u00F3n de la iteraci\u00F3n del observatorio realizada con \u00E9xito
+observatory.stop.title                                                        = Detener la ejecuci\u00F3n del observatorio
 
 other = Otros
 
@@ -3452,6 +3456,7 @@ tooltip.status.report.odt       = Descargar informe de resultados agregados en f
 tooltip.status.report.pdf       = Exportar todos los informes indidividuales de todos los portales
 tooltip.status.report.pdf.email = Exportar todos los informes indidividuales de todos los portales y enviar por email los enlaces
 tooltip.status.results          = Ver resultados de este observatorio
+tooltip.status.stop             = Parar esta iteraci\u00F3n del observatorio
 
 topN.isnumber = El campo 'P\u00E1ginas por nivel' debe ser un n\u00FAmero entero positivo.
 
