WIP Observatory global relaunch congfguration
Former-commit-id: 12efba9ddcacd9c51a5890c1678f797a87939b75

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2611,6 +2611,10 @@ observatory.aspect.structure                                                  = 
 observatory.check.modality.text.green                                         = Por lo tanto, valor = 0 y modalidad = pasa
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
 observatory.evolution.segment.title                                           = Evoluci\u00F3n del segmento {0}
+observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.name                                                 = Nombre
+observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
+observatory.extra.config.value                                                = Valor
 observatory.global.allocation.segment.comparision.table.title                 = Nivel de adecuaci\u00F3n estimado (% de sitios web) por segmento
 observatory.graphic.accesibility.evolution.approval.A.name                    = EvolucionNivelConformidadAccesibilidadA
 observatory.graphic.accesibility.evolution.approval.AA.name                   = EvolucionNivelConformidadAccesibilidadAA
