Status observatory view less threshold results
Former-commit-id: 42099b58a8e22a10cc3b6d3b05fd6ffe89e63c77

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2738,6 +2738,8 @@ observatory.status.last.total.url                                             = 
 observatory.status.last.total.url.analized                                    = Total URL analizadas
 observatory.status.last.total.url.last                                        = \u00DAltima URL analizada
 observatory.status.last.total.url.last.end                                    = Fin \u00FAltima URL analizada
+observatory.status.less.threshold.caption                                     = Informaci\u00F3n de an\u00E1lisis por debajo del umbral
+observatory.status.less.threshold.title                                       = Portales por debajo del umbral
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
