[RelaunchSelection] In result page, allow select lines and launch again only selection.
Former-commit-id: 261c17d65bd629b4689c923afde94c20c68d760c

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2740,6 +2740,8 @@ observatory.status.last.total.url.last.end                                    = 
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
+observatory.status.no.results.relaunchselected                                = Relanzar Seleccionados
+observatory.status.no.results.selector                                        = Selector
 observatory.status.no.results.title                                           = Portales sin resultados
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
 observatory.status.pending.name                                               = Nombre
