--- a/wcagemtool/docker-compose.yml
+++ b/wcagemtool/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.0'
 services:
   node:
     build: .
-    image: oaw/wcagemtool        
+    image: artefactos-ic.scae.redsara.es:6000/oaw-wcagemtool        
     command: npm start
     restart: always
     container_name: wcag_em_tool_node
@@ -11,7 +11,7 @@ services:
   nginx:
     image: artefactos-ic.scae.redsara.es:6000/nginx:1.13.8-alpine      
     ports:
-      - "9000:80"
+      - "80:80"
     volumes:
       - ./nginx_conf.conf:/etc/nginx/conf.d/default.conf
     links:
