--- a/portal/profiles/docker/crawler.properties
+++ b/portal/profiles/docker/crawler.properties
@@ -75,7 +75,7 @@ periodicidad.rastreo = 5
 periodicidad.max = 30
 numRastreos.max = 10
 
-xml.file.max.size = 500000
+xml.file.max.size = 1500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
 export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
@@ -87,6 +87,9 @@ export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/
 export.open.office.template.une.2012b.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
+
+export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
@@ -164,7 +167,8 @@ chart.lenox.graphic.colors = {15,91,255},{255,225,0},{225,18,13}
 chart.evolution.inteco.red.colors = {225,18,13}
 chart.evolution.mp.green.color = {126,154,64}
 chart.observatory.graphic.modality.colors = {38,187,8},{225,18,13}
-chart.observatory.graphic.compilance.colors = {225,18,13},{38,187,8}, {220,220,220}
+chart.observatory.graphic.compilance.colors = {220,220,220},{225,18,13},{38,187,8} 
+chart.observatory.graphic.intav.accesibility.colors = {220,220,220},{225,18,13},{255,225,0},{38,187,8}
 
 max.lenox.context = 10
 lenox.report.pagination = 20
