--- a/portal/profiles/docker/log4j.properties
+++ b/portal/profiles/docker/log4j.properties
@@ -20,6 +20,7 @@ log4j.logger.cz.vutbr=FATAL, rastreador
 log4j.logger.com.helger=FATAL, rastreador
 log4j.logger.es.gob.oaw.css.checks=FATAL, rastreador
 log4j.logger.ca.utoronto=FATAL, rastreador
+log4j.logger.ca.utoronto.atrc.tile.accessibilitychecker=ERROR, rastreador
 log4j.logger.org.odftoolkit.odfdom.OdfXMLFactory = ERROR, rastreador
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
