Fix N/A values in ODS/XLSX
UX changes


Former-commit-id: ded6ec36659784f3003983adea142505e967b2ca

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2737,7 +2737,8 @@ observatory.status.no.results.caption                                         = 
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
 observatory.status.no.results.title                                           = Semillas procesadas sin resultados
-observatory.status.notes.info                                                 = Cuando se a\u00F1ade una semilla manualmente durante la ejecuci\u00F3n de la iteraci\u00F3n o una vez finalizada la iteraci\u00F3n, se a\u00F1ade a la tabla de "Semillas procesadas sin resultados"; desde esta tabla se puede lanzar/ejecutar la semilla a\u00F1adida.
+observatory.status.notes.info                                                 = Semillas procesadas = Semillas procesadas CON resultados + Semillas procesadas SIN resultados
+observatory.status.notes.info2                                                = Cuando se a\u00F1ade una semilla manualmente durante la ejecuci\u00F3n de la iteraci\u00F3n o una vez finalizada la iteraci\u00F3n, se a\u00F1ade a la tabla de "Semillas procesadas sin resultados"; desde esta tabla se puede lanzar/ejecutar la semilla a\u00F1adida.
 observatory.status.notes.running                                              = Total semillas = Semilas procesadas + Semillas sin procesar a\u00FAn
 observatory.status.notes.title                                                = Notas:
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
