Status observatory add extra info threshold seeds
Former-commit-id: ef3aa300e272773db3da4dbef4eb65a2e0fd374c

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2743,7 +2743,6 @@ observatory.status.less.threshold.title                                       = 
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
-
 observatory.status.no.results.relaunchselected                                = Relanzar Seleccionados
 observatory.status.no.results.selector                                        = Selector
 observatory.status.no.results.title                                           = Semillas procesadas sin resultados
@@ -2754,6 +2753,7 @@ observatory.status.notes.title                                                = 
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
 observatory.status.pending.name                                               = Nombre
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
+observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
