--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -292,6 +292,7 @@ cargar.semilla.observatorio.nombre           = Nombre
 cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
 cargar.semilla.observatorio.observaciones    = Observaciones
 cargar.semilla.observatorio.operaciones      = Operaciones
+cargar.semilla.observatorio.principal        = Principal
 cargar.semilla.observatorio.total            = Se van a actualizar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.errores    = No se pueden cargar <strong>{0}</strong> semillas por tener errores
 cargar.semilla.observatorio.total.nuevas     = Se van a crear un total de <strong>{0}</strong> semillas
@@ -760,7 +761,7 @@ global.report.allocation.complexitivity.table.title = Nivel de adecuaci\u00F3n e
 global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
 global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
 global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
-global.report.criteria.table.title                  = N\u00FAmero de portales por criterio: {0}
+global.report.criteria.table.title                  = N\u00FAmero de sitios web por criterio: {0}
 global.report.header.ambit                          = \u00C1mbito
 global.report.header.complexitivity                 = Complejidad
 global.report.header.num.sitios.web                 = N\u00FAmero de sitios web
@@ -1421,6 +1422,7 @@ modificar.categoria.editar.termino.categoria.alt   = Editar T\u00E9rmino Categor
 modificar.categoria.eliminar.termino.categoria.alt = Eliminar T\u00E9rmino Categor\u00EDa
 modificar.categoria.nombre                         = Nombre:
 modificar.categoria.nuevo.termino                  = Nuevo t\u00E9rmino
+modificar.categoria.principal                      = Es principal:
 modificar.categoria.terminos                       = T\u00E9rminos
 modificar.categoria.terminos.acciones              = Acciones
 modificar.categoria.terminos.peso                  = Peso
@@ -2734,17 +2736,21 @@ observatory.status.last.total.url.last.end                                    = 
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
-observatory.status.no.results.title                                           = Portales sin resultados
+observatory.status.no.results.title                                           = Semillas procesadas sin resultados
+observatory.status.notes.info                                                 = Semillas procesadas = Semillas procesadas CON resultados + Semillas procesadas SIN resultados
+observatory.status.notes.info2                                                = Cuando se a\u00F1ade una semilla manualmente durante la ejecuci\u00F3n de la iteraci\u00F3n o una vez finalizada la iteraci\u00F3n, se a\u00F1ade a la tabla de "Semillas procesadas sin resultados"; desde esta tabla se puede lanzar/ejecutar la semilla a\u00F1adida.
+observatory.status.notes.running                                              = Total semillas = Semilas procesadas + Semillas sin procesar a\u00FAn
+observatory.status.notes.title                                                = Notas:
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
 observatory.status.pending.name                                               = Nombre
-observatory.status.pending.title                                              = Portales sin analizar a\u00FAn
+observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
 observatory.status.summary                                                    = Resumen de la ejecuci\u00F3n del observatorio
 observatory.status.summary.caption                                            = Informaci\u00F3n del an\u00E1lisis en curso
-observatory.status.summary.seed.processed                                     = Total de semillas procesadas
-observatory.status.summary.seed.results                                       = Total de semillas procesada con resultados
+observatory.status.summary.seed.processed                                     = Semillas procesadas
+observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
 observatory.status.summary.seed.total                                         = Total de semillas
 observatory.status.summary.time.avg                                           = Tiempo medio
 observatory.status.summary.time.end                                           = Tiempo estimado fin
@@ -3095,9 +3101,12 @@ report.config.plantillas.filter.evol.segmentos.info  = Para que esta plantilla f
 report.config.plantillas.filter.segmentos            = Plantilla de la secci\u00F3n de segmentos
 report.config.plantillas.filter.segmentos.info       = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
 report.config.plantillas.filter.title                = Plantillas a usar para generar el informe
+report.config.tags.fixed.filter.info                 = Seleccionar las etiquetas de recurrencia a tener en cuenta en el apartado de Evoluci\u00F3n de la parte fija
+report.config.tags.fixed.title                       = Etiquetas de recurrencia (apartado de Evoluci\u00F3n de la parte fija)
 report.config.tags.title                             = Etiquetas
 report.config.title                                  = Configurar informe agregado
 report.config.title.default                          = Informe de observatorio de accesibilidad web
+report.config.title.default.acc                      = INFORME AGREGADO DE LAS DECLARACIONES DE ACCESIBILIDAD
 report.config.title.label                            = T\u00EDtulo del documento generado
 report.config.title.title                            = T\u00EDtulo del informe
 report.evolution.allocation.graphic.title.fixed      = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
@@ -3217,6 +3226,8 @@ resultados.anonimos.porc.pasa                                    = Porcentaje Pa
 resultados.anonimos.porc.portales                                = Porcentaje de Portales
 resultados.anonimos.porc.portales.a                              = Prioridad 1
 resultados.anonimos.porc.portales.aa                             = Prioridad 1 y 2
+resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lido
+resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
 resultados.anonimos.porc.portales.parcial                        = Parcial
