--- a/wcagem-tool/wcag-em-report-tool/Dockerfile
+++ b/wcagem-tool/wcag-em-report-tool/Dockerfile
@@ -34,6 +34,7 @@ WORKDIR /opt/wcag-em-tool
 RUN npm install -g bower 
 RUN npm install -g forever 
 RUN npm install
+RUN npm run build
 RUN bower install --allow-root
 
 #Usuario node para ejecutar el renderer
