--- a/wcagemtool/Dockerfile
+++ b/wcagemtool/Dockerfile
@@ -33,7 +33,7 @@ WORKDIR /opt/wcag-em-tool
 RUN npm install -g bower 
 RUN npm install -g forever 
 RUN npm install
-RUN npm run build
+RUN npm run buildgit
 RUN bower install --allow-root
 
 #Usuario node para ejecutar el renderer
