Update spanish texts

--- a/wcagemtool/.gitignore
+++ b/wcagemtool/.gitignore
@@ -4,6 +4,7 @@
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 # Node artifact files
+bower_components/
 node_modules/
 dist/
 .tmp/
