--- a/crawler/profiles/desarrollo/crawler.core.properties
+++ b/crawler/profiles/desarrollo/crawler.core.properties
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologï¿½as de la Comunicaciï¿½n, 
+# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologías de la Comunicación, 
 # This program is licensed and may be used, modified and redistributed under the terms
 # of the European Public License (EUPL), either version 1.2 or (at your option) any later 
 # version as soon as they are approved by the European Commission.
@@ -10,7 +10,7 @@
 # You should have received a copy of the EUPL1.2 license along with this program; if not, 
 # you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Modificaciones: MINHAFP (Ministerio de Hacienda y Funciï¿½n Pï¿½blica) 
+# Modificaciones: MINHAFP (Ministerio de Hacienda y Función Pública) 
 # Email: observ.accesibilidad@correo.gob.es
 #-------------------------------------------------------------------------------
 check.accessibility.default.entity = Inteco
@@ -21,7 +21,7 @@ check.accessibility.default.language = es
 # Parametros
 mail.transport.protocol = smtp
 mail.smtp.host =
-mail.address.from = example@mail
+mail.address.from = alvaro.pelaez@fundacionctic.org
 mail.address.from.name = Inteco Accessibility Validator
 mail.message.subject = Rastreador Web INTECO
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
@@ -60,7 +60,8 @@ amplitud.ilimitada.value = 0
 
 method.accept.header = text/html
 method.accept.language.header = es,en;q=0.8,es-es;q=0.5,en-us;q=0.3
-method.user.agent.header = Mozilla/5.0 (Windows; U; Windows NT 5.1; es-ES; rv\:1.9.1.3) Gecko/20090915 Firefox/3.5.3 (.NET CLR 3.5.30729) 
+#method.user.agent.header = Mozilla/5.0 (Windows; U; Windows NT 5.1; es-ES; rv\:1.9.1.3) Gecko/20090915 Firefox/3.5.3 (.NET CLR 3.5.30729) 
+method.user.agent.header = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36
 
 
 http.proxy.active = false
