--- a/portal/src/main/resources/intav.properties
+++ b/portal/src/main/resources/intav.properties
@@ -29,7 +29,8 @@ check.confidence.level.warning = 2
 check.confidence.level.problem = 3
 check.confidence.level.info = 4
 
-url.w3c.validator = http://validator.w3.org/check
+#url.w3c.validator = http://validator.w3.org/check
+url.w3c.validator = https://validator.w3.org/nu/?out=json&level=error
 url.w3c.validator.human = http://validator.w3.org/check?uri={0}
 url.w3c.validator.human.submit.code = http://validator.w3.org/#validate_by_input
 url.w3c.css.validator = http://jigsaw.w3.org/css-validator/validator?uri={0}&warning=no&lang={1}&output=soap12&profile=css3
