--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -263,8 +263,8 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<!-- <version>2.8.11</version> -->
-			<version>[2.9.10.7,)</version>
+			<version>2.8.11</version>
+<!-- 			<version>[2.9.10.7,)</version> -->
 		</dependency>
 
 
@@ -280,6 +280,12 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.27.0-GA</version>
+		</dependency>
 
 	</dependencies>
 
