CRUD dependency update with new fields

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -265,41 +265,41 @@ camposPass.obligatorios = Introduzca usuario y password.
 
 caracteres.prohibidos = No se pueden usar caract\u00E9res ilegales. S\u00F3lo alfanum\u00E9ricos, espacios, guiones, guiones bajos y puntos.
 
-cargar.observatorio.vacio                    = Volver
-cargar.rastreos.vacio                        = Volver
-cargar.semilla.actualizables.title           = Actualizadas
-cargar.semilla.errors.title                  = Err\u00F3neas
-cargar.semilla.inalterables.title            = Inalteradas
-cargar.semilla.nuevas.title                  = Nuevas
-cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
-cargar.semilla.observatorio.activa           = Activa
-cargar.semilla.observatorio.ambito           = \u00C1mbito
-cargar.semilla.observatorio.buscar.total     = N\u00FAmero de resultados: 
-cargar.semilla.observatorio.categoria        = Nombre
-cargar.semilla.observatorio.clave            = Agrupado por
-cargar.semilla.observatorio.complejidad      = Complejidad
-cargar.semilla.observatorio.dependencia      = Dependencia
-cargar.semilla.observatorio.directorio       = Directorio
-cargar.semilla.observatorio.eliminada        = Eliminada
-cargar.semilla.observatorio.eliminar         = Eliminar
-cargar.semilla.observatorio.errores          = Errores
-cargar.semilla.observatorio.etiquetas        = Etiquetas
-cargar.semilla.observatorio.exportar.todo    = Exportar
-cargar.semilla.observatorio.exportar.todo.xml= Exportar .xml
-cargar.semilla.observatorio.exportar.todo.xlsx= Exportar .xlsx
-cargar.semilla.observatorio.file             = Fichero de semillas
-cargar.semilla.observatorio.importar.todo    = Importar
-cargar.semilla.observatorio.new.value        = Valor nuevo
-cargar.semilla.observatorio.nombre           = Nombre
-cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
-cargar.semilla.observatorio.observaciones    = Observaciones
-cargar.semilla.observatorio.operaciones      = Operaciones
-cargar.semilla.observatorio.principal        = Principal
-cargar.semilla.observatorio.total            = Se van a actualizar un total de <strong>{0}</strong> semillas
-cargar.semilla.observatorio.total.errores    = No se pueden cargar <strong>{0}</strong> semillas por tener errores
-cargar.semilla.observatorio.total.nuevas     = Se van a crear un total de <strong>{0}</strong> semillas
-cargar.semilla.observatorio.total.sincambios = No se van a alterar un total de <strong>{0}</strong> semillas
-cargar.semilla.observatorio.urls             = URLs
+cargar.observatorio.vacio                      = Volver
+cargar.rastreos.vacio                          = Volver
+cargar.semilla.actualizables.title             = Actualizadas
+cargar.semilla.errors.title                    = Err\u00F3neas
+cargar.semilla.inalterables.title              = Inalteradas
+cargar.semilla.nuevas.title                    = Nuevas
+cargar.semilla.observatorio.acronimo           = Acr\u00F3nimo
+cargar.semilla.observatorio.activa             = Activa
+cargar.semilla.observatorio.ambito             = \u00C1mbito
+cargar.semilla.observatorio.buscar.total       = N\u00FAmero de resultados: 
+cargar.semilla.observatorio.categoria          = Nombre
+cargar.semilla.observatorio.clave              = Agrupado por
+cargar.semilla.observatorio.complejidad        = Complejidad
+cargar.semilla.observatorio.dependencia        = Dependencia
+cargar.semilla.observatorio.directorio         = Directorio
+cargar.semilla.observatorio.eliminada          = Eliminada
+cargar.semilla.observatorio.eliminar           = Eliminar
+cargar.semilla.observatorio.errores            = Errores
+cargar.semilla.observatorio.etiquetas          = Etiquetas
+cargar.semilla.observatorio.exportar.todo      = Exportar
+cargar.semilla.observatorio.exportar.todo.xlsx = Exportar .xlsx
+cargar.semilla.observatorio.exportar.todo.xml  = Exportar .xml
+cargar.semilla.observatorio.file               = Fichero de semillas
+cargar.semilla.observatorio.importar.todo      = Importar
+cargar.semilla.observatorio.new.value          = Valor nuevo
+cargar.semilla.observatorio.nombre             = Nombre
+cargar.semilla.observatorio.nueva.semilla      = Nueva Semilla
+cargar.semilla.observatorio.observaciones      = Observaciones
+cargar.semilla.observatorio.operaciones        = Operaciones
+cargar.semilla.observatorio.principal          = Principal
+cargar.semilla.observatorio.total              = Se van a actualizar un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.errores      = No se pueden cargar <strong>{0}</strong> semillas por tener errores
+cargar.semilla.observatorio.total.nuevas       = Se van a crear un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.sincambios   = No se van a alterar un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.urls               = URLs
 
 cartucho.duplicado     = Cartucho ya existente.
 cartucho.invalido      = Formato inv\u00E1lido, el formato v\u00E1lido es tar.gz.
@@ -384,7 +384,9 @@ colname.id                 = ID
 colname.level              = Nivel de accesibilidad
 colname.name               = Nombre
 colname.observations       = Observaciones
+colname.official           = Oficial
 colname.oldname            = Nombre antiguo
+colname.province           = Provincia
 colname.puntuaction        = Puntuaci\u00F3n
 colname.relaunch           = Relanzar
 colname.remove             = Eliminar
@@ -395,6 +397,7 @@ colname.request.date       = Fecha de solicitud
 colname.results            = Resultados
 colname.scope              = \u00C1mbito
 colname.segment            = Segmento
+colname.send.auto          = Env\u00EDo autom\u00E1tico
 colname.send.date          = Fecha de env\u00EDo
 colname.status             = Estado
 colname.total.url          = URLs analizidas
@@ -809,8 +812,8 @@ indice.cartuchos.vacio                             = No hay cartuchos disponible
 indice.categorias.acciones                         = Acciones
 indice.categorias.categoria                        = Segmento
 indice.categorias.categorias                       = Listado de Segmentos
-indice.categorias.download.xml                     = Descargar las semillas de este segmento en formato XML
 indice.categorias.download.xlsx                    = Descargar las semillas de este segmento en formato .xlsx
+indice.categorias.download.xml                     = Descargar las semillas de este segmento en formato XML
 indice.categorias.edit                             = Editar
 indice.categorias.gestion.categorias               = Gesti\u00F3n de Segmentos
 indice.categorias.img.editar.alt                   = Editar Categor\u00EDa
